# Django

LibraryMS/: .env  db.sqlite3  main.py  pyproject.toml
LibraryMS/LibraryMS/: asgi.py  settings.py  urls.py  wsgi.py
LibraryMS/LibraryMS/settings/: common.py  dev.py  prod.py
LibraryMS/catalog/: models.py  serializers.py  urls.py  views.py
LibraryMS/catalog/migrations/: 0001_initial.py  0003_book_author_book_language_language_name_and_more.py
LibraryMS/catalog/template/: index.html
LibraryMS/user/: admin.py  models.py
LibraryMS/user/migrations/: 0004_delete_author.py  serilizer.py
LibraryMS1/: .env
LibraryMS1/LibraryMS/: asgi.py  urls.py
LibraryMS1/catalog/: admin.py  serializers.py
LibraryMS1/catalog/migrations/: 0002_initial.py
LibraryMS1/user/: admin.py  views.py
LibraryMS1/user/migrations/: 0001_initial.py  0002_author_dob_author_dod.py
LibraryMS2/: .env
LibraryMS2/LibraryMS/: wsgi.py
LibraryMS2/catalog/: admin.py  urls.py  views.py
LibraryMS2/user/: admin.py  models.py  views.py
LibraryMS2/user/migrations/: 0003_alter_author_dob.py
